force-app/main/default/objects/BL_Match__c/BL_Match__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>