force-app/main/default/objects/BL_Match__c/fields/CupStage__c.field-meta.xml
<CustomField>
    <fullName>CupStage__c</fullName>
    <description>Number of matches played at this cup stage</description>
    <label>Cup Stage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>