force-app/main/default/objects/BL_Match__c/fields/isResolved__c.field-meta.xml
<CustomField>
    <fullName>isResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If match isResolved that means all rounds was played and match should be included in score tables, otherwise, statistics are not counted</description>
    <label>isResolved</label>
    <type>Checkbox</type>
</CustomField>