force-app/main/default/objects/BL_Match__c/fields/MatchDate__c.field-meta.xml
<CustomField>
    <fullName>MatchDate__c</fullName>
    <description>Datetime when match was resolved</description>
    <label>Match Date</label>
    <type>DateTime</type>
</CustomField>