force-app/main/default/objects/BL_Match__c/fields/NextRoundMatch__c.field-meta.xml
<CustomField>
    <fullName>NextRoundMatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Round Match</label>
    <referenceTo>BL_Match__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>PreviousRoundMatches</relationshipName>
    <type>Lookup</type>
</CustomField>