force-app/main/default/objects/BL_Match__c/fields/Team1__c.field-meta.xml
<CustomField>
    <fullName>Team1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team1</label>
    <referenceTo>BL_Competitor__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>