force-app/main/default/objects/BL_Match__c/fields/Team1_Score__c.field-meta.xml
<CustomField>
    <fullName>Team1_Score__c</fullName>
    <label>Team1 Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>