force-app/main/default/objects/BL_Match__c/fields/Team1Round1Goals__c.field-meta.xml
<CustomField>
    <fullName>Team1Round1Goals__c</fullName>
    <label>Team1 Round1 Goals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>