force-app/main/default/objects/BL_Match__c/fields/Team1TotalGoalsScored__c.field-meta.xml
<CustomField>
    <fullName>Team1TotalGoalsScored__c</fullName>
    <formula>Team1Round1Goals__c +  Team1Round2Goals__c +  Team1Round3Goals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team1 Total Goals Scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>