force-app/main/default/objects/BL_Match__c/fields/Team2__c.field-meta.xml
<CustomField>
    <fullName>Team2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team2</label>
    <referenceTo>BL_Competitor__c</referenceTo>
    <relationshipLabel>Matches (Team2)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>