force-app/main/default/objects/BL_Match__c/fields/Team2_Status__c.field-meta.xml
<CustomField>
    <fullName>Team2_Status__c</fullName>
    <formula>IF(
  Team2_Score__c &gt; Team1_Score__c,
  &quot;winner&quot;,
  IF(
    Team1_Score__c &gt; Team2_Score__c,
    &quot;loser&quot;,
    &quot;draw&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team 2 Status</label>
    <type>Text</type>
</CustomField>