force-app/main/default/objects/BL_Match__c/fields/Team2TotalGoalsScored__c.field-meta.xml
<CustomField>
    <fullName>Team2TotalGoalsScored__c</fullName>
    <formula>Team2Round1Goals__c + Team2Round2Goals__c + Team2Round3Goals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team2 Total Goals Scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>