force-app/main/default/objects/BL_Match__c/fields/Third_Place_Match__c.field-meta.xml
<CustomField>
    <fullName>Third_Place_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Place Match</label>
    <referenceTo>BL_Match__c</referenceTo>
    <relationshipLabel>Matches (3rd Place Match)</relationshipLabel>
    <relationshipName>ThirdPlacePreviousRoundMatches</relationshipName>
    <type>Lookup</type>
</CustomField>