force-app/main/default/objects/BL_Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>IF( Team1_Score__c &gt; Team2_Score__c,  Team1__c ,  (IF(Team1_Score__c &lt; Team2_Score__c, Team2__c, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner</label>
    <type>Text</type>
</CustomField>