force-app/main/default/objects/BL_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competition__c</columns>
    <columns>CupStage__c</columns>
    <columns>Team1_Score__c</columns>
    <columns>Team2_Score__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Team1__c</columns>
    <columns>Team2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>